# OpenSpeakers

./: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.offline.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example_text.md  openspeakers.sh  pyproject.toml  setup-openspeakers.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile.base-gpu  Dockerfile.worker  Dockerfile.worker-asr  Dockerfile.worker-dia  Dockerfile.worker-f5  Dockerfile.worker-fish  Dockerfile.worker-orpheus  Dockerfile.worker-qwen3  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_add_voice_reference_text.py  004_add_job_similarity.py
backend/app/: main.py
backend/app/api/: router.py  websockets.py
backend/app/api/endpoints/: models.py  system.py  tts.py  voices.py
backend/app/asr/: __init__.py  whisper.py
backend/app/core/: celery.py  config.py  exceptions.py
backend/app/db/: migrations.py  models.py
backend/app/eval/: __init__.py  similarity.py
backend/app/middleware/: request_id.py
backend/app/models/: _ref_audio.py  base.py  chatterbox.py  cosyvoice.py  dia_tts.py  f5_tts.py  fish_speech.py  kokoro.py  manager.py  qwen3_tts.py  vibevoice.py  vibevoice_1p5b.py
backend/app/schemas/: tts.py  voices.py
backend/app/tasks/: asr_tasks.py  eval_tasks.py  tts_tasks.py
backend/tests/: test_ref_audio.py  test_similarity.py  test_voices_api.py
configs/: models.yaml  presets.yaml
frontend/: nginx.conf  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/components/: AudioPlayer.svelte  CompareAudio.svelte  ErrorBanner.svelte  GpuStatus.svelte  JobProgress.svelte  ModelParams.svelte  ModelSelector.svelte  ReferenceAudioRef.svelte  SimilarityHints.svelte  SimilarityScale.svelte  ThemeToggle.svelte  WaveformPreview.svelte
frontend/src/lib/api/: tts.ts  voices.ts
frontend/src/lib/stores/: theme.ts
frontend/src/routes/: +error.svelte  +layout.svelte
scripts/: docker_push.sh  download-models.sh  eval_speaker_similarity.py  fix-model-permissions.sh  install.sh  package-offline.sh  test_all_models.py
(+6 files in other folders)
